--- a/styles.scss
+++ b/styles.scss
@@ -4,12 +4,11 @@ $accent-blue: #00EDFF;
 $accent-yellow: #F6FF07;
 $background-green: #F0FFF0;
 $line-blue: #253C5B;
-$font: 'Hind Siliguri', sans-serif;
+$font: 'Architects Daughter', cursive;
 
 html {
   font-family: $font;
   color: $line-blue;
-  // background-color: $background-green;
   background: rgb(252,255,172);
   background: radial-gradient(circle, rgba(252,255,172,1) 0%, rgba(184,255,224,1) 62%);
 
@@ -28,7 +27,7 @@ img {
 
 #main-header {
   text-align: center;
-  font-size: 30px;
+  font-size: 50px;
   margin: 50px;
 }
 
@@ -40,7 +39,7 @@ main {
 
 #form-container {
   float: right;
-  width: 20%;
+  width: 25%;
 }
 
 form {
@@ -51,22 +50,20 @@ form {
   label {
     margin-top: 20px;
     margin-bottom: 2px;
-    font-weight: 500;
+    font-size: 18px;
 
     span.error {
       color: rgb(197, 22, 22);
-      font-weight: 700;
     }
   }
-
-  input {
-    height: 23px;
-  }
-
+  
   input, select {
+    height: 28px;
     border-radius: 5px;
     border: none;
     box-shadow: 0 0 10px lightblue;
+    font-family: $font;
+    font-size: 18px;
   }
 
   #term-text-input {
@@ -81,7 +78,7 @@ form {
     background: transparent;
     border: none;
     color: $main-blue;
-    font-weight: 700;
+    font-size: 20px;
     font-family: $font;
   }
 
